--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,38 +3,39 @@
 @tailwind components;
 @tailwind utilities;
 
-.link-anim{
-    @apply relative inline-block text-white before:absolute before:bottom-0 before:left-1/2 before:h-[2px] before:w-0 before:-translate-x-1/2 before:bg-white before:transition-all before:duration-300 hover:before:w-full
+.link-anim {
+    @apply relative inline-block text-white before:absolute before:bottom-0 before:left-1/2 before:h-[2px] before:w-0 before:-translate-x-1/2 before:bg-white before:transition-all before:duration-300 hover:before:w-full;
 }
 
-.bg-primary{
-    @apply bg-gradient-to-tr from-primary-900 to-primary-400 text-white
+.bg-primary {
+    @apply bg-gradient-to-tr from-primary-900 to-primary-400 text-white;
 }
-.bg-danger{
-    @apply bg-gradient-to-tr from-danger-900 to-danger-400 text-white
+.bg-danger {
+    @apply bg-gradient-to-tr from-danger-900 to-danger-400 text-white;
 }
-.bg-warning{
-    @apply bg-gradient-to-tr from-warning-700 to-warning-400 text-white
+.bg-warning {
+    @apply bg-gradient-to-tr from-warning-700 to-warning-400 text-white;
 }
-.bg-secondary{
-    @apply bg-gradient-to-tr from-secondary-900 to-secondary-400 text-white
+.bg-secondary {
+    @apply bg-gradient-to-tr from-secondary-900 to-secondary-400 text-white;
 }
-.bg-default{
-    @apply bg-gradient-to-tr from-secondary-900 to-secondary-500 text-white
+.bg-default {
+    @apply bg-gradient-to-tr from-secondary-900 to-secondary-500 text-white;
 }
-.bg-info{
-    @apply bg-gradient-to-tr from-cyan-800 to-cyan-500 text-white
+.bg-info {
+    @apply bg-gradient-to-tr from-cyan-800 to-cyan-500 text-white;
+}
+
+.sidebar-item {
+    @apply flex gap-4 rounded-sm px-2 py-2 hover:bg-gray-100/30 hover:text-white;
+}
+
+.MuiAvatar-root {
+    @apply bg-primary-100;
+}
+
+.gjxMoC {
+    @apply text-primary-300;
 }
 
 
-.sidebar-item{
-    @apply flex gap-4 rounded-sm px-2 py-2 hover:bg-gray-100/30 hover:text-white
-}
-
-.MuiAvatar-root{
-    @apply bg-primary-100
-}
-
-.gjxMoC{
-    @apply text-primary-300
-}
