--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,7 +8,7 @@
 }
 
 .link-member{
-    @apply py-2 hover:bg-primary-50 px-3 flex gap-2 items-center
+    @apply py-2 hover:bg-primary-50 px-3 flex gap-2 items-center rounded-sm
 }
 
 .bg-primary {
